chore: commit outstanding website changes

--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="header-wrapper">
             <a href="/" class="logo-link">
-                <img src="images/elderella-logo.svg" alt="Elderella - Elder care coordination platform" class="logo">
+                <img src="images/elderella-logo-header.png" alt="Elderella - Elder care coordination platform" class="logo">
             </a>
         </div>
     </div>
