--- a/v2/remembers-and-reminds.html
+++ b/v2/remembers-and-reminds.html
@@ -31,9 +31,9 @@
     <section class="product-tabs-section">
         <div class="container">
             <div class="product-tabs">
-                <a href="collects.html" class="product-tab-link">Collects care details</a>
-                <a href="remembers.html" class="product-tab-link active">Remembers and reminds</a>
-                <a href="shares.html" class="product-tab-link">Shares the load</a>
+                <a href="collects-care-details.html" class="product-tab-link">Collects care details</a>
+                <a href="remembers-and-reminds.html" class="product-tab-link active">Remembers and reminds</a>
+                <a href="shares-the-load.html" class="product-tab-link">Shares the load</a>
             </div>
         </div>
     </section>
@@ -79,7 +79,7 @@
                     <div class="feature-card-overlay">
                         <div class="feature-card-copy">
                             <h3 class="feature-card-title">Know what's next</h3>
-                            <p class="feature-card-text">Your \"What's Next\" view shows the most pressing tasks and closest events at a glance, so you can stop wondering what you're forgetting.</p>
+                            <p class="feature-card-text">Your "What's Next" view shows the most pressing tasks and closest events at a glance, so you can stop wondering what you're forgetting.</p>
                         </div>
                     </div>
                     <div class="feature-card-illustration">
@@ -209,9 +209,9 @@
         <div class="container">
             <h2 class="help-tabs-title">Help for family caregivers</h2>
             <div class="help-tabs">
-                <a href="collects.html" class="help-tab-link">Collects care details</a>
-                <a href="remembers.html" class="help-tab-link active">Remembers and reminds</a>
-                <a href="shares.html" class="help-tab-link">Shares the load</a>
+                <a href="collects-care-details.html" class="help-tab-link">Collects care details</a>
+                <a href="remembers-and-reminds.html" class="help-tab-link active">Remembers and reminds</a>
+                <a href="shares-the-load.html" class="help-tab-link">Shares the load</a>
             </div>
         </div>
     </section>
