--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <meta property="og:description" content="Elderella lightens the invisible load of Elder care by planning, organizing, delegating, and sweeping away the endless to-dos that weigh you down.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.elderella.com/">
-    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo.svg">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-header.png">
     <meta property="og:site_name" content="Elderella">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Elderella - Your Elder Care Administrator">
     <meta name="twitter:description" content="Elderella lightens the invisible load of Elder care by planning, organizing, delegating, and sweeping away the endless to-dos.">
-    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo.svg">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-header.png">
 
     <link rel="canonical" href="https://www.elderella.com/">
     <title>Elderella - Your Elder Care Administrator</title>
