--- a/security.html
+++ b/security.html
@@ -12,14 +12,14 @@
     <meta property="og:description" content="Learn how Elderella protects your family's eldercare information with enterprise-grade security and privacy-first measures.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.elderella.com/security">
-    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo.svg">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-header.png">
     <meta property="og:site_name" content="Elderella">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Security - Elderella">
     <meta name="twitter:description" content="Learn how Elderella protects your family's eldercare information with enterprise-grade security.">
-    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo.svg">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-header.png">
 
     <link rel="canonical" href="https://www.elderella.com/security">
     <title>Security - Elderella</title>
