--- a/support.html
+++ b/support.html
@@ -11,14 +11,14 @@
     <meta property="og:description" content="Get help and support for Elderella, the caregiving app.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.elderella.com/support">
-    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo.svg">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-header.png">
     <meta property="og:site_name" content="Elderella">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Support - Elderella">
     <meta name="twitter:description" content="Get help and support for Elderella, the caregiving app.">
-    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo.svg">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-header.png">
 
     <link rel="canonical" href="https://www.elderella.com/support">
     <title>Support - Elderella</title>
