--- a/terms.html
+++ b/terms.html
@@ -11,14 +11,14 @@
     <meta property="og:description" content="Review Elderella's terms of service and user agreement for our elder care coordination platform.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.elderella.com/terms">
-    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo.svg">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-header.png">
     <meta property="og:site_name" content="Elderella">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Terms of Service - Elderella">
     <meta name="twitter:description" content="Review Elderella's terms of service and user agreement for our elder care coordination platform.">
-    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo.svg">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-header.png">
 
     <link rel="canonical" href="https://www.elderella.com/terms">
     <title>Terms of Service - Elderella</title>
