UI and content updates across v2: - Collects: first-card overlay sizing/alignment; event outcome image refs and size; scoped shares selectors to avoid image squashing - Remembers: card backgrounds, image sizing/stacking; Ask Ella alt backdrop; meds card alignment/gap fixes - Shares: card image sizes, stacks, ordering; updated images and widths; header/footer link tweaks - Trust: styling adjustments (promise/protected/privacy rights), icons, links, tooltips; data retention icon restored - Introduce: hero h4 + body copy sizing; link color override - Index/Download: disabled iOS links with Coming soon tooltip; updated CTA links; positioned tooltip next to badge - Header/Footer: reordered nav, hid FAQ and footer items, updated links - How Elderella Works: resized caregivers card images by 15%

--- a/v2/index.html
+++ b/v2/index.html
@@ -41,7 +41,7 @@
                     <div class="hero-media">
                         <div class="hero-phone-wrap">
                             <div class="hero-badges">
-                                <a href="https://apps.apple.com/app/id6753773809" class="store-badge">
+                                <a href="#" class="store-badge soon-badge" aria-disabled="true" data-tooltip="Coming soon!">
                                     <img
                                         src="images/app-store-badge.png"
                                         srcset="images/app-store-badge.png 1x, images/app-store-badge@2x.png 2x"
@@ -85,7 +85,7 @@
     <section class="solo-shift">
         <div class="container solo-shift-container">
             <div class="solo-shift-left">
-                <h2 class="solo-shift-headline">Do your last<br>solo shift.</h2>
+                <h1>Do your last<br>solo shift.</h1>
                 <img
                     src="images/arrow-curved.png"
                     srcset="images/arrow-curved.png 1x, images/arrow-curved@2x.png 2x"
@@ -101,7 +101,7 @@
             <div class="solo-shift-right">
                 <p class="solo-shift-subhead">Don't do it all. And don't do it alone.</p>
                 <p class="solo-shift-text">Elderella brings structure, memory, and support by organizing the chaos, remembering the details, and building your team.</p>
-                <a href="explore.html" class="btn-purple">How we help</a>
+                <a href="how-elderella-works.html" class="btn-purple">How we help</a>
             </div>
         </div>
     </section>
@@ -261,7 +261,7 @@
     <section class="see-more">
         <div class="container see-more-container">
             <h2 class="see-more-headline">See more ways we help</h2>
-            <a href="explore.html" class="btn-more">More!</a>
+            <a href="collects-care-details.html" class="btn-more">More!</a>
         </div>
     </section>
 
@@ -282,20 +282,23 @@
                 >
             </div>
             <div class="keep-on-top-content">
-                <h2 class="keep-on-top-headline">Keep on top of elder care</h2>
+                <h2>Keep on top of elder care</h2>
                 <p class="keep-on-top-text">Elderella is for families supporting elders. Built to help you organize care, share information, and ease the mental load of caregiving.</p>
                 <div class="keep-on-top-badges">
-                    <a href="https://apps.apple.com/app/id6753773809" class="store-badge">
-                        <img
-                            src="images/app-store-badge.png"
-                            srcset="images/app-store-badge.png 1x, images/app-store-badge@2x.png 2x"
-                            width="120"
-                            height="40"
-                            alt="Download on the App Store"
-                            loading="lazy"
-                            decoding="async"
-                        >
-                    </a>
+                    <div class="badge-wrapper coming-soon">
+                        <a href="#" class="store-badge" aria-disabled="true" aria-label="Download on the App Store (Coming soon)">
+                            <img
+                                src="images/app-store-badge.png"
+                                srcset="images/app-store-badge.png 1x, images/app-store-badge@2x.png 2x"
+                                width="120"
+                                height="40"
+                                alt="Download on the App Store"
+                                loading="lazy"
+                                decoding="async"
+                            >
+                        </a>
+                        <span class="soon-tooltip" role="tooltip">Coming soon!</span>
+                    </div>
                     <a href="https://play.google.com/store/apps/details?id=com.elderella.app" class="store-badge">
                         <img
                             src="images/google-play-badge.png"
@@ -318,6 +321,18 @@
     <!-- Web Components -->
     <script src="js/components/site-header.js"></script>
     <script src="js/components/site-footer.js"></script>
+    <script>
+    // Enable click-to-show tooltip on the disabled App Store badge
+    document.querySelectorAll('.keep-on-top-badges .badge-wrapper.coming-soon a[aria-disabled="true"]').forEach(function(link){
+        link.addEventListener('click', function(e){
+            e.preventDefault();
+            var wrap = link.closest('.badge-wrapper');
+            if (!wrap) return;
+            wrap.classList.add('show');
+            setTimeout(function(){ wrap.classList.remove('show'); }, 1200);
+        });
+    });
+    </script>
 
 </body>
 </html>
