--- a/v2/introduce.html
+++ b/v2/introduce.html
@@ -15,7 +15,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="page-introduce">
     <!-- Site Header Component (no promo banner on this page) -->
     <site-header no-promo></site-header>
 
@@ -23,7 +23,7 @@
     <section class="introduce-hero" id="main-content">
         <div class="container">
             <h1 class="introduce-hero-title">Introducing Elderella</h1>
-            <p class="introduce-hero-text">Introducing something new to your caregiving routine can feel tricky, especially when it involves technology, privacy, or changing how things are done.</p>
+            <h4 class="introduce-hero-text">Introducing something new to your caregiving routine can feel tricky, especially when it involves technology, privacy, or changing how things are done.</h4>
             <p class="introduce-hero-text">The tips below will help you explain what Elderella is, why you're using it, and how it supports everyone involved.</p>
             <p class="introduce-hero-text">Some elders may want to use Elderella with you, others may prefer you just keep them informed. Both approaches are fine as long as the person you're caring for understands how their information will be used and feels comfortable giving their consent.</p>
         </div>
