Copy: update App Store 'Coming soon!' tooltips to include newsletter notification CTA

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="hero-media">
                         <div class="hero-phone-wrap">
                             <div class="hero-badges">
-                                <a href="#" class="store-badge soon-badge" aria-disabled="true" data-tooltip="Coming soon!">
+                                <a href="#" class="store-badge soon-badge" aria-disabled="true" data-tooltip="Coming soon! Sign up for our newsletter to be notified.">
                                     <img
                                         src="images/app-store-badge.png"
                                         srcset="images/app-store-badge.png 1x, images/app-store-badge@2x.png 2x"
@@ -285,7 +285,7 @@
                 <h2>Keep on top of elder care</h2>
                 <p class="keep-on-top-text">Elderella is for families supporting elders. Built to help you organize care, share information, and ease the mental load of caregiving.</p>
                 <div class="keep-on-top-badges">
-                    <a href="#" class="store-badge soon-badge" aria-disabled="true" data-tooltip="Coming soon!">
+                    <a href="#" class="store-badge soon-badge" aria-disabled="true" data-tooltip="Coming soon! Sign up for our newsletter to be notified.">
                         <img
                             src="images/app-store-badge.png"
                             srcset="images/app-store-badge.png 1x, images/app-store-badge@2x.png 2x"
