--- a/download.html
+++ b/download.html
@@ -31,7 +31,7 @@
     <section class="download-badges-section">
         <div class="container">
             <div class="download-badges">
-                <a href="#" class="download-badge soon-badge" aria-label="Download on the App Store" aria-disabled="true" data-tooltip="Coming soon!">
+                <a href="#" class="download-badge soon-badge" aria-label="Download on the App Store" aria-disabled="true" data-tooltip="Coming soon! Sign up for our newsletter to be notified.">
                     <img
                         src="images/app-store-badge.png"
                         srcset="images/app-store-badge.png 1x, images/app-store-badge@2x.png 2x"
