feat(home): redesign stats section into cards with heading; center and size cards (300x350), 40px gaps, no shadows; copy updates and alt text\n\nseo: switch pages to index, follow; add canonical + Open Graph + Twitter tags; use clean URLs in meta; set alpha pages to noindex, follow\n\naccessibility: remove duplicate skip link; add aria-labels, prevent App Store disabled links from navigating; add labels to Google Play; footer signup full-width on mobile\n\nlayout: standardize 80px spacing between sections; adjust padding around stats and feature sections; use clean URLs in index links; preload hero images

--- a/alpha-android.html
+++ b/alpha-android.html
@@ -5,24 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Step-by-step instructions for installing Elderella on your Android phone using Google Play. Join our alpha testing program.">
     <meta name="keywords" content="Elderella Android, Google Play, alpha testing, Android app installation, caregiving app">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="noindex, follow">
 
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Installing Elderella on Android">
-    <meta property="og:description" content="Step-by-step instructions for installing Elderella on your Android phone using Google Play.">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="https://www.elderella.com/alpha-android">
-    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo.svg">
-    <meta property="og:site_name" content="Elderella">
-
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Installing Elderella on Android">
-    <meta name="twitter:description" content="Step-by-step instructions for installing Elderella on your Android phone using Google Play.">
-    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo.svg">
-
-    <link rel="canonical" href="https://www.elderella.com/alpha-android">
+    
     <title>Installing Elderella on Android - Alpha</title>
+    <link rel="canonical" href="https://www.elderella.com/alpha-android">
+    <meta property="og:title" content="Installing Elderella on Android - Alpha">
+    <meta property="og:description" content="Step-by-step instructions for installing Elderella on your Android phone using Google Play. Join our alpha testing program.">
+    <meta property="og:url" content="https://www.elderella.com/alpha-android">
+    <meta property="og:site_name" content="Elderella">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Installing Elderella on Android - Alpha">
+    <meta name="twitter:description" content="Step-by-step instructions for installing Elderella on your Android phone using Google Play. Join our alpha testing program.">
+    <meta name="twitter:url" content="https://www.elderella.com/alpha-android">
+    <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Structured Data -->
     <script type="application/ld+json">
