--- a/alpha-ios.html
+++ b/alpha-ios.html
@@ -5,24 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Step-by-step instructions for installing Elderella on your iPhone using TestFlight. Join our alpha testing program.">
     <meta name="keywords" content="Elderella iOS, TestFlight, alpha testing, iPhone app installation, caregiving app">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="noindex, follow">
 
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Installing Elderella on iPhone">
-    <meta property="og:description" content="Step-by-step instructions for installing Elderella on your iPhone using TestFlight.">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="https://www.elderella.com/alpha-ios">
-    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo.svg">
-    <meta property="og:site_name" content="Elderella">
-
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Installing Elderella on iPhone">
-    <meta name="twitter:description" content="Step-by-step instructions for installing Elderella on your iPhone using TestFlight.">
-    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo.svg">
-
-    <link rel="canonical" href="https://www.elderella.com/alpha-ios">
+    
     <title>Installing Elderella on iPhone - Alpha</title>
+    <link rel="canonical" href="https://www.elderella.com/alpha-ios">
+    <meta property="og:title" content="Installing Elderella on iPhone - Alpha">
+    <meta property="og:description" content="Step-by-step instructions for installing Elderella on your iPhone using TestFlight. Join our alpha testing program.">
+    <meta property="og:url" content="https://www.elderella.com/alpha-ios">
+    <meta property="og:site_name" content="Elderella">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Installing Elderella on iPhone - Alpha">
+    <meta name="twitter:description" content="Step-by-step instructions for installing Elderella on your iPhone using TestFlight. Join our alpha testing program.">
+    <meta name="twitter:url" content="https://www.elderella.com/alpha-ios">
+    <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Structured Data -->
     <script type="application/ld+json">
