--- a/collects-care-details.html
+++ b/collects-care-details.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="index, follow">
     <meta name="description" content="Learn how Elderella collects caregiving information from everyday conversations, notes, and documents to build a comprehensive care story for your loved one.">
     <title>Collects Care Details - Help for Family Caregivers | Elderella</title>
+    <link rel="canonical" href="https://www.elderella.com/collects-care-details">
+    <meta property="og:title" content="Collects Care Details - Help for Family Caregivers | Elderella">
+    <meta property="og:description" content="Learn how Elderella collects caregiving information from everyday conversations, notes, and documents to build a comprehensive care story for your loved one.">
+    <meta property="og:url" content="https://www.elderella.com/collects-care-details">
+    <meta property="og:site_name" content="Elderella">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Collects Care Details - Help for Family Caregivers | Elderella">
+    <meta name="twitter:description" content="Learn how Elderella collects caregiving information from everyday conversations, notes, and documents to build a comprehensive care story for your loved one.">
+    <meta name="twitter:url" content="https://www.elderella.com/collects-care-details">
+    <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
