--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="index, follow">
     <meta name="description" content="Elderella Privacy Policy - How we protect and handle your personal information">
     <meta name="keywords" content="elderella privacy policy, elder care privacy, data protection, personal information security, HIPAA compliance, eldercare data privacy">
 
@@ -11,6 +11,17 @@
 
     <link rel="canonical" href="https://www.elderella.com/privacy">
     <title>Privacy Policy - Elderella</title>
+    <link rel="canonical" href="https://www.elderella.com/privacy">
+    <meta property="og:title" content="Privacy Policy - Elderella">
+    <meta property="og:description" content="Elderella Privacy Policy - How we protect and handle your personal information">
+    <meta property="og:url" content="https://www.elderella.com/privacy">
+    <meta property="og:site_name" content="Elderella">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Privacy Policy - Elderella">
+    <meta name="twitter:description" content="Elderella Privacy Policy - How we protect and handle your personal information">
+    <meta name="twitter:url" content="https://www.elderella.com/privacy">
+    <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Structured Data -->
     <script type="application/ld+json">
