--- a/shares-the-load.html
+++ b/shares-the-load.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="index, follow">
     <meta name="description" content="Learn how Elderella helps you share caregiving responsibilities with your care team - coordinate care, delegate tasks, and control access levels.">
     <title>Shares the Load - Help for Family Caregivers | Elderella</title>
+    <link rel="canonical" href="https://www.elderella.com/shares-the-load">
+    <meta property="og:title" content="Shares the Load - Help for Family Caregivers | Elderella">
+    <meta property="og:description" content="Learn how Elderella helps you share caregiving responsibilities with your care team - coordinate care, delegate tasks, and control access levels.">
+    <meta property="og:url" content="https://www.elderella.com/shares-the-load">
+    <meta property="og:site_name" content="Elderella">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Shares the Load - Help for Family Caregivers | Elderella">
+    <meta name="twitter:description" content="Learn how Elderella helps you share caregiving responsibilities with your care team - coordinate care, delegate tasks, and control access levels.">
+    <meta name="twitter:url" content="https://www.elderella.com/shares-the-load">
+    <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
