--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="index, follow">
     <meta name="description" content="Elderella Terms of Service - Terms and conditions for using our elder care coordination platform">
     <meta name="keywords" content="elderella terms of service, elder care terms, care coordination agreement, eldercare platform conditions">
 
@@ -11,6 +11,17 @@
 
     <link rel="canonical" href="https://www.elderella.com/terms">
     <title>Terms of Service - Elderella</title>
+    <link rel="canonical" href="https://www.elderella.com/terms">
+    <meta property="og:title" content="Terms of Service - Elderella">
+    <meta property="og:description" content="Elderella Terms of Service - Terms and conditions for using our elder care coordination platform">
+    <meta property="og:url" content="https://www.elderella.com/terms">
+    <meta property="og:site_name" content="Elderella">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Terms of Service - Elderella">
+    <meta name="twitter:description" content="Elderella Terms of Service - Terms and conditions for using our elder care coordination platform">
+    <meta name="twitter:url" content="https://www.elderella.com/terms">
+    <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Structured Data -->
     <script type="application/ld+json">
