--- a/download.html
+++ b/download.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="index, follow">
     <meta name="description" content="Download Elderella for iOS and Android. Turn everyday elder care updates into organized care you can rely on.">
     <title>Download Elderella - Family Caregiving Made Simple</title>
+    <link rel="canonical" href="https://www.elderella.com/download">
+    <meta property="og:title" content="Download Elderella - Family Caregiving Made Simple">
+    <meta property="og:description" content="Download Elderella for iOS and Android. Turn everyday elder care updates into organized care you can rely on.">
+    <meta property="og:url" content="https://www.elderella.com/download">
+    <meta property="og:site_name" content="Elderella">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Download Elderella - Family Caregiving Made Simple">
+    <meta name="twitter:description" content="Download Elderella for iOS and Android. Turn everyday elder care updates into organized care you can rely on.">
+    <meta name="twitter:url" content="https://www.elderella.com/download">
+    <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
