--- a/how-elderella-works.html
+++ b/how-elderella-works.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="index, follow">
     <meta name="description" content="Discover how Elderella helps family caregivers organize care, share responsibilities, and manage medications with Ella, your AI caregiving partner.">
     <title>How Elderella Works - Family Caregiving Made Simple</title>
+    <link rel="canonical" href="https://www.elderella.com/how-elderella-works">
+    <meta property="og:title" content="How Elderella Works - Family Caregiving Made Simple">
+    <meta property="og:description" content="Discover how Elderella helps family caregivers organize care, share responsibilities, and manage medications with Ella, your AI caregiving partner.">
+    <meta property="og:url" content="https://www.elderella.com/how-elderella-works">
+    <meta property="og:site_name" content="Elderella">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="How Elderella Works - Family Caregiving Made Simple">
+    <meta name="twitter:description" content="Discover how Elderella helps family caregivers organize care, share responsibilities, and manage medications with Ella, your AI caregiving partner.">
+    <meta name="twitter:url" content="https://www.elderella.com/how-elderella-works">
+    <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
