--- a/introduce.html
+++ b/introduce.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="index, follow">
     <meta name="description" content="Tips and conversation starters for caregivers introducing Elderella to their elders. Build comfort and consent around using caregiving technology.">
     <title>Introducing Elderella to Your Elder | Elderella</title>
+    <link rel="canonical" href="https://www.elderella.com/introduce">
+    <meta property="og:title" content="Introducing Elderella to Your Elder | Elderella">
+    <meta property="og:description" content="Tips and conversation starters for caregivers introducing Elderella to their elders. Build comfort and consent around using caregiving technology.">
+    <meta property="og:url" content="https://www.elderella.com/introduce">
+    <meta property="og:site_name" content="Elderella">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Introducing Elderella to Your Elder | Elderella">
+    <meta name="twitter:description" content="Tips and conversation starters for caregivers introducing Elderella to their elders. Build comfort and consent around using caregiving technology.">
+    <meta name="twitter:url" content="https://www.elderella.com/introduce">
+    <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
