--- a/story.html
+++ b/story.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="index, follow">
     <meta name="description" content="Share your elder care story with Elderella. Help us build better support for family caregivers by sharing your experiences.">
     <title>Share Your Elder Care Story | Elderella</title>
+    <link rel="canonical" href="https://www.elderella.com/story">
+    <meta property="og:title" content="Share Your Elder Care Story | Elderella">
+    <meta property="og:description" content="Share your elder care story with Elderella. Help us build better support for family caregivers by sharing your experiences.">
+    <meta property="og:url" content="https://www.elderella.com/story">
+    <meta property="og:site_name" content="Elderella">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Share Your Elder Care Story | Elderella">
+    <meta name="twitter:description" content="Share your elder care story with Elderella. Help us build better support for family caregivers by sharing your experiences.">
+    <meta name="twitter:url" content="https://www.elderella.com/story">
+    <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
