--- a/trust.html
+++ b/trust.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="index, follow">
     <meta name="description" content="Learn how Elderella protects your family's caregiving information with healthcare-grade security, privacy controls, and transparent data practices.">
     <title>Trust & Security - How We Protect Your Information | Elderella</title>
+    <link rel="canonical" href="https://www.elderella.com/trust">
+    <meta property="og:title" content="Trust & Security - How We Protect Your Information | Elderella">
+    <meta property="og:description" content="Learn how Elderella protects your family's caregiving information with healthcare-grade security, privacy controls, and transparent data practices.">
+    <meta property="og:url" content="https://www.elderella.com/trust">
+    <meta property="og:site_name" content="Elderella">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Trust & Security - How We Protect Your Information | Elderella">
+    <meta name="twitter:description" content="Learn how Elderella protects your family's caregiving information with healthcare-grade security, privacy controls, and transparent data practices.">
+    <meta name="twitter:url" content="https://www.elderella.com/trust">
+    <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
